--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./assets/css/index.css" />
 
-    <title>Title</title>
+    <title>Lev3_1_css-vertiefung_float</title>
   </head>
   <body>
     <header id="Menu">
